<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_SEE" />

            <RadioButton
                android:id="@+id/radioMakeUp"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_MAKE" />

            <RadioButton
                android:id="@+id/radioSupp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_SUPP" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exam"
            android:text="@string/usn"
            android:textSize="20sp"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:text="@string/name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:text="@string/num"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:layout_toEndOf="@id/textView4"
            android:layout_toRightOf="@id/textView4"
            android:inputType="textPersonName"
            android:maxLength="2" />

        <TextView
            android:id="@+id/semlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText3"
            android:text="@string/sem"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_sem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText3"
            android:layout_toEndOf="@id/semlabel"
            android:layout_toRightOf="@id/semlabel"
            android:inputType="textPersonName"
            android:maxLength="2" />


        <TableLayout
            android:id="@+id/courses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editText_sem"
            android:textSize="20sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slno" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cc" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ct" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade" />

            </TableRow>


        </TableLayout>

         <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:text="@string/tfee" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:layout_toEndOf="@id/textView11"
            android:layout_toRightOf="@id/textView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView11"
            android:text="@string/date" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView13"
            android:layout_toRightOf="@id/textView13"
            android:layout_below="@id/textView12" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView14"
            android:text="@string/submit"
            android:onClick="submitReval"/>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>